--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-url: https://ahilwane.github.io/site/
-baseurl: /site
+url: https://uae-taxes.com/
+#baseurl: /
 
 # Site settings
 title: PLS Accounting
